2008-11-10  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py: ignore errors that could happen when
	trying to chmod autogen.sh/configure missing its exec bit.

2008-11-09  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules: renamed clutter trunk modules to
	-trunk, removed -0.8 from the module name for the stable branches; to
	match what existed in gnome-external-deps.

2008-11-09  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules, modulesets/gnome-suites-2.26.modules:
	removed duplicated (brasero, gnome-user-share, unique) modules from
	gnome-2.26, added brasero to proposed modules.

2008-11-09  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-suites-2.26.modules: Add gnome-user-share to
	proposed modules, remove stray reference to conduit

2008-11-09  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules,
	modulesets/gnome-suites-2.26.modules, patches/nspr.config_64bits.patch,
	patches/nspr.configure.patch, patches/nspr.pkgconfig.patch,
	patches/nspr.sonames.patch, patches/nss.pkgconfig-and-configure.patch,
	patches/nss.sonames.patch: use nspr and nss tarballs instead of getting
	those libraries from the big mozilla tarball; added necessary patches
	so it builds and installs sanely; mostly stolen from Debian.

2008-11-09  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/tarball.py: display expected extraction
	directory on tarball extraction failure.

2008-11-09  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py: make sure autogen.sh/configure are
	executable.

2008-11-08  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: updated eog dependencies.

2008-11-08  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules, modulesets/gnome-suites-2.26.modules,
	modulesets/gnome-external-deps-2.26.modules: added intltool as a
	dependency to all modules (from the official suites) that requires it.