@@ -1,5 +1,10 @@
 2008-11-10  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/testmodule.py: do not try to force a X display when
+	running dogtail scripts and noxvfb is set.
+
+2008-11-10  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/autotools.py: ignore errors that could happen when
 	trying to chmod autogen.sh/configure missing its exec bit.
 
